remove pycache, add .gitignore, update UI and ext logic...

--- a/SlicerGPT/Resources/UI/SlicerGPT.ui
+++ b/SlicerGPT/Resources/UI/SlicerGPT.ui
@@ -12,9 +12,12 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QTextBrowser" name="conversation"/>
+   </item>
+   <item>
     <widget class="QPlainTextEdit" name="prompt">
      <property name="plainText">
-      <string>ttt</string>
+      <string/>
      </property>
     </widget>
    </item>
