usage of Llama_cpp for loading gguf models + inference add a Reflexion button to let the model think or not

--- a/SlicerGPT/Resources/UI/SlicerGPT.ui
+++ b/SlicerGPT/Resources/UI/SlicerGPT.ui
@@ -12,6 +12,26 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="thinkBox">
+     <property name="text">
+      <string>Raisonning</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QTextBrowser" name="conversation"/>
    </item>
    <item>
@@ -40,19 +60,6 @@
       <string>SlicerGPT can do some mistakes.</string>
      </property>
     </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
