--- a/SlicerGPT/Resources/UI/SlicerGPT.ui
+++ b/SlicerGPT/Resources/UI/SlicerGPT.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>590</width>
-    <height>468</height>
+    <width>595</width>
+    <height>503</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -23,6 +23,76 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <widget class="QLineEdit" name="apiKeyText">
+     <property name="inputMethodHints">
+      <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="apiKeyButton">
+     <property name="text">
+      <string>Set github/azure API key</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="modelsBox">
+     <property name="title">
+      <string/>
+     </property>
+     <widget class="QRadioButton" name="apiButton">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>0</y>
+        <width>291</width>
+        <height>18</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>API Model</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="baseButton">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>291</width>
+        <height>18</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Base model</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="thinkBox">
